[tool.poetry]
name = "PDaltagent"
version = "0.4.0"
description = ""
authors = ["Martin Stone <martin@pagerduty.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2"
celery = "^5"
flask = "^2"
gunicorn = "^20"
pymongo = "^4.2.0"
validators = "^0.20.0"
func-timeout = "^4.3.5"
cron-converter = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7"

[tool.poetry.scripts]
pdagentd = 'pdaltagent.tasks:consume'
pdpollerd = 'pdaltagent.tasks:poll'
pd-send = 'pdaltagent.pdsend:main'

[build-system]
requires = ["poetry>=1.1.14"]
build-backend = "poetry.masonry.api"
