[tool.poetry]
name = "PDaltagent"
version = "0.5.0"
description = ""
authors = ["Martin Stone <martin@pagerduty.com>"]
exclude = ["pdaltagent/ui"]

[tool.poetry.dependencies]
python = "~3.12"
requests = "~2"
celery = "~5"
flask = "~2"
gunicorn = "~22"
pymongo = "~4.2.0"
validators = "~0.20.0"
func-timeout = "^4.3.5"
croniter = "~1.3"
flask-wtf = "~1.2"
mongoengine = "~0.28"
flask-security-too = "~5.4"
bcrypt = "~4.0.1"
bleach = "~6.1"
setuptools = "^70.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7"

[tool.poetry.scripts]
pdagentd = 'pdaltagent.tasks:consume'
pdpollerd = 'pdaltagent.tasks:poll'
pd-send = 'pdaltagent.pdsend:main'
pdaltagentui = 'pdaltagent.api.api:app'

[build-system]
requires = ["poetry>=1.1.14"]
build-backend = "poetry.masonry.api"
